# uranium-punjab-predictor

./: README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
data/: master.csv  uranium2_cleaned.csv
notebooks/: making_model.ipynb
src/uranium_punjab_predictor/: app.py
src/uranium_punjab_predictor/utils/: model.py
