[project]
name = "uranium-punjab-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.1",
    "ipykernel>=7.1.0",
    "joblib>=1.5.2",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "pyproj>=3.7.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
    "streamlit>=1.51.0",
]

[dependency-groups]
dev = [
    "uranium-punjab-predictor",
]

[tool.uv.sources]
uranium-punjab-predictor = { workspace = true }
